--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-text-transition": "^3.1.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.15"
   },
